fix: webRequest block to change ua for hacpai api

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,8 @@
     "notifications",
     "storage",
     "cookies",
+    "webRequest",
+    "webRequestBlocking",
     "*://*.hacpai.com/*"
   ],
   "content_scripts": [
